# advpt-exercises

./: .gitignore  README.md
Part 1 (a, b)/a,b/: factorial.h  main.cpp
Part 1 (a, b)/c/: main.cpp
Part 1/a,b/: range.h
examples/: Lambdas.cpp  ScreenClass.cpp
examples/cycle_shared/: cycle.cpp  cycleBreak.cpp
examples/rvalueReference/: rvalueReference.cpp  rvalueReferenceToLvalue.cpp
examples/shared_ptr/: sharedPtr.cpp  sharedPtrDeleter.cpp  sharedPtrDouDelete.cpp  uniquePtr.cpp  uniquePtrArray.cpp  weakPtr.cpp
examples/templates/: perfectForwarding.cpp  trail-ret.cpp
exercise1/part4/: CMakeLists.txt  matvec.hpp  tensor.hpp  test_matvec.cpp
exercise2/CMake/header/: bar.h  foo.h
exercise2/CMake/src/: bar.cpp
part1/a,b/: factorial.h
week2/part1/a,b/: range.h
week2/part4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matvec.hpp  tensor.hpp  test_tensor  test_tensor.cpp
week3/CMake/: CMakeLists.txt  README.md  main.cpp
week3/CMake/src/: CMakeLists.txt  foo.cpp
week4/: README.md  overloading.cpp
week5/: README.md
